--- a/SpringSecurityApplication/src/main/resources/templates/registration.html
+++ b/SpringSecurityApplication/src/main/resources/templates/registration.html
@@ -2,22 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <title>Регистрация нового пользователя</title>
+    <link th:href="@{/css/authentificationAndRegistration.css}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<h3>Регистрация</h3>
-<form method="post" th:actioin="@{/registration}" th:object="${person}">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    <label for="login">Введите логин: </label>
+<input type="hidden" th:name= "${_csrf.parameterName}" th:value="${_csrf.token}"/>
+<form method="post" th:action="@{/registration}" th:object="${person}">
+    <h3> Регистрация </h3>
+    <label for="login">Введите логин </label>
     <input type="text" th:field="*{login}" id="login">
-    <div style="color: red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></div>
-    <br>
-    <label for="password">Введите пароль: </label>
+    <div style="color: red" class="error-message" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></div>
+    <label for="password">Введите пароль</label>
     <input type="password" th:field="*{password}" id="password">
-    <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-    <br>
+    <div style="color: red" class="error-message" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
     <input type="submit" value="Зарегистрироваться">
+    <a  href="/authentication" class="link">Войти в личный кабинет</a>
 </form>
-<a href="/authentication">Вход</a>
 </body>
+<footer>
+    <div class="center">
+        <a href="/product" class="product-button">Просмотр товаров без регистрации и входа</a>
+    </div>
+</footer>
 </html>
