--- a/SpringSecurityApplication/src/main/resources/templates/user/index.html
+++ b/SpringSecurityApplication/src/main/resources/templates/user/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <link th:href="@{/css/product.css}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <form method="post" th:action="@{/logout}">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     <button type="submit">Выйти из личного кабинета</button>
 </form>
 <br>
@@ -17,57 +19,62 @@
     <input type="submit" value="Заказы">
 </form>
 <h1>Личный кабинет</h1>
-<h3>Cортировка, поиск, фильтрация</h3>
-<form th:method="POST" th:action="@{/person account/product/search}">
+<h3> Сортировка, поиск, фильтрация </h3>
+<form th:method="POST" th:action="@{/person_account/product/search}">
     <fieldset>
-        <legend>Выберите параметры для сортировки, поиска, фильтрации:</legend>
+        <legend>Выберите параметр для сортировки, поиска, фильтрации:</legend>
         <label for="search">Поиск по наименованию</label>
         <input type="text" id="search" name="search" th:value="*{value_search}">
-        <br>
-        <p>Цена, P</p>
-        <label for="ot">От</label>
-        <input type="text" name="ot" id="ot" th:value="*{value_price_ot}">
-        <label for="do">До</label>
-        <input type="text" name="do" id="do" th:value="*{value_price_do}">
-        <br>
-        <br>
+        <p>Фильтр стоймости товара, Р</p>
+        <div class="form-group">
+            <label for="ot">От:</label>
+            <input type="text" name="ot" id="ot" th:value="*{value_price_ot}">
+            <label for="Do">До:</label>
+            <input type="text" name="Do" id="Do" th:value="*{value_price_Do}">
+        </div>
         <div>
-            <input type="radio" id="ascending_price" name="price" value="sorted_by_ascending_price">
-            <label for="ascending_price">Отсортировать по возрастанию цены</label>
-            <input type="radio" id="descending_price" name="price"
-                   value="sorted_by_descending_price">
-            <label for="descending_price">Отсортировать по убыванию цены</label>
+
+            <div class="btn-group">
+                <input type="radio" id="ascending_price" name="price" value="sorted_by_ascending_price">
+                <label for="ascending_price">Отсортировать по возрастанию цены</label>
+                <input type="radio" id="descending_price" name="price" value="sorted_by_descending_price">
+                <label for="descending_price">Отсортировать по убыванию цены</label>
+            </div>
             <p>Категория товаров: </p>
-            <input type="radio" id="furniture" name="contract" value="furniture">
-            <label for="furniture">Мебель</label>
-            <input type="radio" id="appliances" name="contract" value="appliances">
-            <label for="appliances">Бытовая техника</label>
-            <input type="radio" id="clothes" name="contract" value="clothes">
-            <label for="clothes">Одежда</label>
-            <br>
-            <br>
+            <div class="btn-group">
+                <input type="radio" id="furniture" name="contract" value="furniture">
+                <label for="furniture">Диски</label>
+                <input type="radio" id="appliances" name="contract" value="appliances">
+                <label for="appliances">Летние шины</label>
+                <input type="radio" id="clothes" name="contract" value="clothes">
+                <label for="clothes">Зимние шины</label>
+            </div>
             <input type="submit" value="Найти">
         </div>
     </fieldset>
 </form>
+
 <hr>
-<h3>Результат поиска, cортировки, фильтрации</h3>
-<div th:each="product : ${search_product}">
-    <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
-    <br>
-    <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a>
-    <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-    <hr>
+<h3>Результат поиска, сортировки и фильтрации</h3>
+<div th:each="product : ${search_product}" class="productSearch">
+    <img th:src="'/img/' +${product.imageList[0].getFileName()}">
+    <a th:href="@{/product/info/{id}(id=${product.getId()})}" class="Green">
+        <h4 th:text="${product.getTitle()}"></h4>
+        <p th:text="'Цена: ' +${product.getPrice()}"></p>
+    </a>
+    <a class="add" th:href="@{/cart/add/{id}(id=${product.getId()})}">Добавить товар в корзину</a>
 </div>
 <hr>
-<h3>Доступные товары: </h3>
-<div th:each="product : ${products}">
-    <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
-    <br>
-    <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}"></a>
-    <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-    <a th:href="@{/cart/add/{id}(id=${product.getId()})}">Добавить товар в корзину</a>
-    <hr>
+<h3> Доступные товары: </h3>
+<div class="product-container">
+    <div th:each="product : ${products}" class="product">
+        <a th:href="@{/product/info/{id}(id=${product.getId()})}" class="productA">
+            <img th:src="'/img/' +${product.imageList[0].getFileName()}">
+            <h4 th:text="${product.getTitle()}"></h4>
+            <p th:text="'Цена: ' +${product.getPrice()}"></p>
+        </a>
+        <a class="add" th:href="@{/cart/add/{id}(id=${product.getId()})}">Добавить товар в корзину</a>
+    </div>
 </div>
 </body>
 </html>
