--- a/SpringSecurityApplication/src/main/resources/templates/user/infoProduct.html
+++ b/SpringSecurityApplication/src/main/resources/templates/user/infoProduct.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Информация о товаре</title>
+    <link th:href="@{/css/infoProduct.css}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <h3>Информация о товаре: </h3>
+<div class="button">
+    <form method="get" th:action="@{/person_account}">
+        <input type="submit" value="Личный кабинет"/>
+    </form>
+    <form method="get" th:action="@{/cart}">
+        <input type="submit" value="Корзина товаров"/>
+    </form>
+    <form method="get" th:action="@{/orders}">
+        <input type="submit" value="Заказы"/>
+    </form>
+</div>
 <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
 <p th:text="'Описание: ' + ${product.getDescription()}"></p>
 <p th:text="'Цена: ' + ${product.getPrice()}"></p>
