--- a/SpringSecurityApplication/src/main/resources/static/css/editOrders.css
+++ b/SpringSecurityApplication/src/main/resources/static/css/editOrders.css
@@ -19,18 +19,18 @@ form {
 }
 .button input{
     width: 19em;
-    font-size: 10px;
+    font-size: 15px;
     border-radius: 10px;
     box-shadow: 0 0 2px rgb(0 0 0 / 30%);
     cursor: pointer;
     margin: 1em 3em 0 3em;
     border: 1px solid #0000004d;
-    background: #459a48;
+    background: #18d7ab;
     color: white;
 }
 .button input:hover{
     transform: translate(0, 2px);
-    background-color: #215b25;
+    background-color: #987b25;
 }
 
 
@@ -72,11 +72,11 @@ form {
 }
 
 .orders a:hover {
-    color: #4cad50 ;
+    color: #18d7ab ;
     transform: translate(0, 2px);
 }
 .edit[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #18d7ab;
     border: none;
     color: white;
     padding: 0.5em;
@@ -88,6 +88,6 @@ form {
     margin: 10px;
 }
 .edit[type="submit"]:hover{
-    background-color: #215b25;
+    background-color: #987b25;
     transform: translate(0, 2px);
 }
