--- a/SpringSecurityApplication/src/main/resources/static/css/infoProduct.css
+++ b/SpringSecurityApplication/src/main/resources/static/css/infoProduct.css
@@ -51,7 +51,7 @@ h3{
 .button input{
     width: 15em;
     color: white;
-    background-color: #4cac50;
+    background-color: #18d7ab;
     border-radius: 10px;
     box-shadow: 0 0 2px rgb(0 0 0 / 30%);
     cursor: pointer;
@@ -60,12 +60,12 @@ h3{
 }
 .button input:hover{
     transform: translate(0, 2px);
-    background-color: #215b25;
+    background-color: #987b25;
 }
 .add{
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4cac50;
+    background-color: #18d7ab;
     color: #fff;
     border-radius: 10px;
     text-decoration: none;
@@ -73,6 +73,6 @@ h3{
 }
 .add:hover {
     transform: translate(0, 2px);
-    background-color: #215b25;
+    background-color: #987b25;
     color: #fff;
 }
