--- a/SpringSecurityApplication/src/main/resources/static/css/persons.css
+++ b/SpringSecurityApplication/src/main/resources/static/css/persons.css
@@ -22,14 +22,14 @@ h3{
 a{
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4cac50;
+    background-color: #18d7ab;
     color: #fff;
     border-radius: 10px;
     text-decoration: none;
     margin: 5px;
 }
 a:hover {
-    background-color: #215b25;
+    background-color: #987b25;
     color: #fff;
     transform: translate(0, 2px);
 }
@@ -43,21 +43,21 @@ a:hover {
 }
 .button input{
     width: 19em;
-    font-size: 10px;
+    font-size: 15px;
     border-radius: 10px;
     box-shadow: 0 0 2px rgb(0 0 0 / 30%);
     cursor: pointer;
     margin: 1em 3em 0 3em;
     border: 1px solid #0000004d;
-    background: #459a48;
+    background: #18d7ab;
     color: white;
 }
 .button input:hover{
     transform: translate(0, 2px);
-    background-color: #215b25;
+    background-color: #987b25;
 }
 .edit[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #18d7ab;
     border: none;
     color: white;
     padding: 0.5em;
@@ -69,6 +69,6 @@ a:hover {
     margin-left: 40px;
 }
 .edit[type="submit"]:hover{
-    background-color: #215b25;
+    background-color: #987b25;
     transform: translate(0, 2px);
 }
