--- a/SpringSecurityApplication/src/main/resources/static/css/searchOrders.css
+++ b/SpringSecurityApplication/src/main/resources/static/css/searchOrders.css
@@ -23,7 +23,7 @@ input[id="search"] {
 }
 
 .searching[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #18d7ab;
     border: none;
     color: white;
     padding: 0.5em;
@@ -34,7 +34,7 @@ input[id="search"] {
     cursor: pointer;
 }
 .searching[type="submit"]:hover{
-    background-color: #215b25;
+    background-color: #987b25;
     transform: translate(0, 2px);
 }
 
@@ -126,7 +126,7 @@ hr {
 }
 
 .orders a:hover {
-    color: #4cad50 ;
+    color: #18d7ab ;
     transform: translate(0, 2px);
 }
 
@@ -136,13 +136,13 @@ hr {
 }
 .button input{
     width: 19em;
-    font-size: 10px;
+    font-size: 15px;
     border-radius: 10px;
     box-shadow: 0 0 2px rgb(0 0 0 / 30%);
     cursor: pointer;
     margin: 1em 3em 0 3em;
     border: 1px solid #0000004d;
-    background: #459a48;
+    background: #18d7ab;
     color: white;
 }
 h1{
@@ -151,14 +151,14 @@ h1{
 .add{
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4cac50;
+    background-color: #18d7ab;
     color: #fff;
     border-radius: 10px;
     text-decoration: none;
     margin: 5px;
 }
 .add:hover {
-    background-color: #215b25;
+    background-color: #987b25;
     color: #fff;
     transform: translate(0, 2px);
 }
