--- a/SpringSecurityApplication/src/main/resources/templates/authentication.html
+++ b/SpringSecurityApplication/src/main/resources/templates/authentication.html
@@ -6,7 +6,7 @@
     <link th:href="@{/css/authentificationAndRegistration.css}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<h3>Вход</h3>
+<h3>Вход в личный кабинет</h3>
 <form method="post" action="/process_login">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     <label for="username">Введите логин: </label>
