--- a/SpringSecurityApplication/src/main/resources/templates/registration.html
+++ b/SpringSecurityApplication/src/main/resources/templates/registration.html
@@ -6,14 +6,15 @@
     <link th:href="@{/css/authentificationAndRegistration.css}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+<h3> Регистрация </h3>
 <input type="hidden" th:name= "${_csrf.parameterName}" th:value="${_csrf.token}"/>
 <form method="post" th:action="@{/registration}" th:object="${person}">
-    <h3> Регистрация </h3>
-    <label for="login">Введите логин </label>
-    <input type="text" th:field="*{login}" id="login">
+
+    <label for="login">Введите логин:</label>
+    <input type="text" placeholder="Введите логин" th:field="*{login}" id="login">
     <div style="color: red" class="error-message" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></div>
-    <label for="password">Введите пароль</label>
-    <input type="password" th:field="*{password}" id="password">
+    <label for="password">Введите пароль:</label>
+    <input type="password" placeholder="Введите пароль" th:field="*{password}" id="password">
     <div style="color: red" class="error-message" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
     <input type="submit" value="Зарегистрироваться">
     <a  href="/authentication" class="link">Войти в личный кабинет</a>
