--- a/SpringSecurityApplication/src/main/resources/templates/user/index.html
+++ b/SpringSecurityApplication/src/main/resources/templates/user/index.html
@@ -8,11 +8,11 @@
 <body>
 <form method="post" th:action="@{/logout}">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    <button type="submit">Выйти из личного кабинета</button>
+    <input type="submit" value="Выход">
 </form>
 <br>
 <form method="get" th:action="@{/cart}">
-    <button type="submit">Корзина</button>
+    <input type="submit" value="Корзина">
 </form>
 <br>
 <form method="get" th:action="@{/orders}">
